2008-08-22  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-metadata-utils.c
	(tracker_metadata_read): Strip metadata separators when reading from
	the external extractor.

2008-08-22  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-indexer-module.c
	(tracker_indexer_module_file_get_uri): Reduce the warning to a debug
	message, it's still nice to have that info, but it isn't crucial
	either.

2008-08-22  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-db/tracker-db-index.c: (tracker_db_index_open),
	(tracker_db_index_flush): Fixed the g_return_val_if_fail() check
	for the priv->index already being set in tracker_db_index_open().
	Initially it is not set at all so the index was not being opened.
	Also, if we can't open the index, we now debug specifically if it
	was because the file doesn't exist yet or if it wasn't closed
	properly. 

2008-08-21  Martyn Russell  <martyn@imendio.com>

	* data/services/default.service: Added inode/; to the prefixes to
	recognise folders like $HOME/.xchat.
	
	* src/libtracker-common/tracker-ontology.[ch]: 
	* tests/libtracker-common/tracker-ontology-test.c: Added in
	tracker_ontology_get_db_by_service_type() a check for NULL service
	strings.

	* src/libtracker-common/tracker-parser.c: Cleaned up the code,
	fixed a nasty double free that was introduced recently. Do proper
	type checking for TrackerLanguage. Make sure we reference the
	language and unreference it when creating/freeing the parser.
	
	* src/libtracker-common/tracker-service.[ch]:
	(tracker_db_type_get_type): Added missing enumerations: unknown,
	files and xesam.
	
	* src/libtracker-db/tracker-db-manager.[ch]: Added
	TRACKER_DB_UNKNOWN type.
	
	* src/trackerd/tracker-db.[ch]: Make use of GStaticPrivate for the
	local data. Also instead of using priv->index, we now send the
	services we are interested in to TrackerQueryTree and it finds out
	what indexes it needs to use instead. Added a function to return a